--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.raywenderlich.android.alltherecipes"
+        applicationId "com.sabin.android.com.sabin.android.com.sabin.android.forkrecipe"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
