--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.raywenderlich.android.alltherecipes">
+    package="com.sabin.android.forkrecipe">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipeDetailActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sabin.android.forkrecipe.RecipeDetailActivity"></activity>
+        <activity android:name="com.sabin.android.forkrecipe.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
