--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
